# GHAppy

./: .gitignore  CHANGELOG.md  GHAppy.cabal  README.md  cabal.project  curl.sh  flake.nix  make-documentation.sh  preamble.yaml  run.sh
.github/workflows/: haskell.yml  nix-build.yml
app/: Example.hs  Main.hs  OptParser.hs
docs/: GHAppy-OptParser.html  GHAppy-Types.html  GHAppy.haddock  GHAppy.html  doc-index.html  index.html
docs/GHAppy/: GHAppy.html
example/: indigo-audit-report.yaml  report2.yaml
html/GHAppy/: GHAppy.haddock  doc-index.html
src/: GHAppy.hs
src/GHAppy/: OptParser.hs  Types.hs  Utils.hs  YamlInterface.hs
test/: Test.hs
