cabal-version:      2.4
name:               GHAppy
version:            0.1.0.0
author:             Vlad P. Luchian
maintainer:         cstmlcodes@gmail.com
extra-source-files: CHANGELOG.md

common settings
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , freer-simple
    , http-conduit
    , katip
    , lens
    , lens-aeson
    , mtl
    , optparse-applicative
    , pandoc
    , text
    , typed-process
    , vector

  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import:          settings 
  hs-source-dirs:  src
  exposed-modules:
    GHAppy
    GHAppy.OptParser

executable GHAppy
  import:           settings
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:    GHAppy

test-suite GHAppy-Tests
  import:         settings
  type:           exitcode-stdio-1.0
  build-depends:
    , GHAppy
    , tasty

  hs-source-dirs: test
  main-is:        Test.hs
