cabal-version:      2.4
name:               GHAppy
version:            0.2.0.0
author:             Vlad P. Luchian
maintainer:         vlad@mlabs.city
extra-source-files:
  CHANGELOG.md
  README.md

description:
  GHAppy stands for GitHub API Processor, and is a small utility library used
  for easily composing and creating Audit Reports.

common settings
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , directory
    , filepath
    , freer-simple
    , http-conduit
    , katip
    , lens
    , lens-aeson
    , mtl
    , optparse-applicative
    , pandoc
    , SHA                   ==1.6.4.4
    , text
    , yaml

  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeOperators
    ViewPatterns

  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists -Werror
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls
    -Wno-unticked-promoted-constructors -fprint-explicit-foralls
    -fprint-explicit-kinds

library
  import:          settings 
  hs-source-dirs:  src
  exposed-modules:
    GHAppy
    GHAppy.OptParser
    GHAppy.Types
    GHAppy.YamlInterface

executable Example
  import:         settings
  main-is:        Example.hs
  hs-source-dirs: app
  build-depends:  GHAppy

executable GHAppy
  import:         settings
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  GHAppy

test-suite GHAppy-Tests
  import:         settings
  type:           exitcode-stdio-1.0
  build-depends:
    , GHAppy
    , tasty
    , tasty-hunit

  hs-source-dirs: test
  main-is:        Test.hs
